# TrimRight

./: .gitignore  CMakeLists.txt  main.cpp
